--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title>IceCreamShop</title>
 </head>
 <body>
-    <h1>Ice Cream Shop</h1>
+    <header>
+        <div class="row">
+            <ul class="main-nav">
+                <li>
+
+
+
+                    
+                </li>
+
+
+
+            </ul>
+
+
+
+        </div>
+
+
+    </header>
 </body>
 </html>
