Finishing Home page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 <body>
     <header>
         <div class="row">
+            <div class="logo">
+                <img src="./logo3.png">
+            </div>
             <ul class="main-nav">
-                <li>
-                    
-
-
-
-                </li>
-
-
-
+                <li> <a href="">Home</a></li>
+                <li> <a href="">About</a></li>
+                <li> <a href="">Contact</a></li>
             </ul>
 
 
 
+        </div>
+
+        <div class="Hero">
+            <h1>Are you Ready ?</h1>
+
+            <div class="button">
+                <a href="" class="btn">Go For Ice Cream</a>
+
+            </div>
         </div>
 
 
