Home Page Finished

--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
                 <img src="./logo3.png">
             </div>
             <ul class="main-nav">
-                <li> <a href="">Home</a></li>
-                <li> <a href="">About</a></li>
-                <li> <a href="">Contact</a></li>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="about.html">About</a></li>
+                <li> <a href="contact.html">Contact</a></li>
             </ul>
 
 
 
         </div>
 
-        <div class="Hero">
+        <!--<div class="Hero"> 
             <h1>Are you Ready ?</h1>
 
             <div class="button">
-                <a href="" class="btn">Go For Ice Cream</a>
+                <a href="card.html" class="btn">Go For Ice Cream</a>
 
             </div>
+        -->
         </div>
-
+        <div class="Hero"> 
+                <h1>Are you Ready ?</h1>
+    
+                <div class="button">
+                    <a href="card.html" class="btn">Go For Ice Cream</a>
+    
+                </div>
 
     </header>
 </body>
