--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <ul class="main-nav">
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="about.html">About</a></li>
+                <li> <a href="card.html">Shop</a></li>
                 <li> <a href="contact.html">Contact</a></li>
+
             </ul>
 
 
