--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>About | Sweet Treat</title>
+  <title>About | Sweet Treats</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -29,21 +29,24 @@
     <main>
      
         <div class= "top-content">
-            <h1><strong>Our History</strong></h1>
-            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients is what has set our brand apart.</p>
-            <p>We’ve never wavered on the principles that made us who we are from the very beginning. Today, we continue to transform the finest ingredients into extraordinary experiences bite by bite.</p>
+            <p id="headline">Our History</p>
+            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients is what has set our brand apart. 
+            <br>We’ve never wavered on the principles that made us who we are from the very beginning. 
+            <br>Today, we continue to transform the finest ingredients into extraordinary experiences bite by bite.
+            </p>
         </div>
 
         
         <div class="content-page">
-            <h2 class="bluetext">About</h2>
-            <h3><strong></strong>We sell fun, not just ice cream</strong></h3>
-            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream with a variety of flavors.</p>
-            <p>Customer can have a different flavor every day of every month. We also believe that people should be able to taste the samples until they find the one they want to buy.</p>
+            <p id="bullet">About</p>
+            <p id="bluetext">We sell fun, not just ice cream</p>
+            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream with a variety of flavors. 
+            <br>Customer can have a different flavor every day of every month. We also believe that people should be able to taste the samples until they find the one they want to buy.
+            </p>
         </div>
 
         <div class="promo">
-            <h2>Promo</h4>
+            <p id="bullet">Promo</p>
                 <img src="link di sini">
         </div>
 
