adding promo to about.html

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
         <div class="promo">
             <p id="bullet">Promo</p>
-                <img src="link di sini">
+                <img src="./promo.png">
         </div>
 
 
