--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
 
   <title>About | Sweet Treats</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -15,7 +15,7 @@
 
         <div class="row">
             <div class="logo">
-                <img src="./logo3.png">
+                <img src="assets/img/logo3.png">
             </div>
             <ul class="main-nav">
                 <li> <a href="">Home</a></li>
@@ -47,7 +47,7 @@
 
         <div class="promo">
             <p id="bullet">Promo</p>
-                <img src="./promo.png">
+                <img src="assets/img/promo.png">
         </div>
 
 
