--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <title>IceCreamShop</title>
 </head>
 <body>
     <header>
         <div class="row">
             <div class="logo">
-                <img src="./logo3.png">
+                <img src="assets/img/logo3.png">
             </div>
             <ul class="main-nav">
                 <li> <a href="index.html">Home</a></li>
