--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 
 <head>
 
-  <title>About | Sweet Treats</title>
-  <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <title>About | Sweet Treats</title>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -27,32 +27,35 @@
     </header>
 
     <main>
-     
-        <div class= "top-content">
+
+        <div class="top-content">
             <p id="headline">Our History</p>
-            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients is what has set our brand apart. 
-            <br>We’ve never wavered on the principles that made us who we are from the very beginning. 
-            <br>Today, we continue to transform the finest ingredients into extraordinary experiences bite by bite.
+            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients is
+                what has set our brand apart.
+                <br>We’ve never wavered on the principles that made us who we are from the very beginning.
+                <br>Today, we continue to transform the finest ingredients into extraordinary experiences bite by bite.
             </p>
         </div>
 
-        
+
         <div class="content-page">
             <p id="bullet">About</p>
             <p id="bluetext">We sell fun, not just ice cream</p>
-            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream with a variety of flavors. 
-            <br>Customer can have a different flavor every day of every month. We also believe that people should be able to taste the samples until they find the one they want to buy.
+            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream
+                with a variety of flavors.
+                <br>Customer can have a different flavor every day of every month. We also believe that people should be
+                able to taste the samples until they find the one they want to buy.
             </p>
         </div>
 
         <div class="promo">
             <p id="bullet">Promo</p>
-                <img src="assets/img/promo.png">
+            <img src="assets/img/promo.png">
         </div>
 
 
     </main>
 
 </body>
-  
+
 </html>
