--- a/about.html
+++ b/about.html
@@ -18,9 +18,10 @@
                 <img src="assets/img/logo3.png">
             </div>
             <ul class="main-nav">
-                <li> <a href="">Home</a></li>
-                <li> <a href="">About</a></li>
-                <li> <a href="">Contact</a></li>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="about.html">About</a></li>
+                <li> <a href="card.html">Shop</a></li>
+                <li> <a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -30,8 +31,7 @@
 
         <div class="top-content">
             <p id="headline">Our History</p>
-            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients is
-                what has set our brand apart.
+            <p>Our passion for crafting the perfect flavors and creamiest textures using only the finest ingredients.
                 <br>We’ve never wavered on the principles that made us who we are from the very beginning.
                 <br>Today, we continue to transform the finest ingredients into extraordinary experiences bite by bite.
             </p>
@@ -41,10 +41,8 @@
         <div class="content-page">
             <p id="bullet">About</p>
             <p id="bluetext">We sell fun, not just ice cream</p>
-            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream
-                with a variety of flavors.
-                <br>Customer can have a different flavor every day of every month. We also believe that people should be
-                able to taste the samples until they find the one they want to buy.
+            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream with a variety of flavors.
+                <br>We believe that people should beable to taste the samples until they find the one they want to buy.
             </p>
         </div>
 
