--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <title>IceCreamShop</title>
 </head>
+
 <body>
     <header>
         <div class="row">
             <div class="logo">
-                <img src="./logo3.png">
+                <img src="assets/img/logo3.png">
             </div>
             <ul class="main-nav">
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="card.html">Shop</a></li>
                 <li> <a href="contact.html">Contact</a></li>
-
             </ul>
-
-
-
         </div>
 
         <!--<div class="Hero"> 
@@ -34,14 +32,14 @@
             </div>
         -->
         </div>
-        <div class="Hero"> 
-                <h1>Are you Ready ?</h1>
-    
-                <div class="button">
-                    <a href="card.html" class="btn">Go For Ice Cream</a>
-    
-                </div>
+        <div class="Hero">
+            <h1>Are you Ready ?</h1>
 
+            <div class="button">
+                <a href="card.html" class="btn">Go For Ice Cream</a>
+
+            </div>
     </header>
 </body>
+
 </html>
