update about and promo

--- a/about.html
+++ b/about.html
@@ -40,15 +40,38 @@
 
         <div class="content-page">
             <p id="bullet">About</p>
-            <p id="bluetext">We sell fun, not just ice cream</p>
-            <p>Sweet Treats, one of the biggest Ice Cream franchises in the world, a specialist in the Premium Ice Cream with a variety of flavors.
-                <br>We believe that people should beable to taste the samples until they find the one they want to buy.
-            </p>
+            <p>Sweet Treats, a specialist in the Premium Ice Cream with a variety of flavors.</p>
+            <p>We believe that people should be able to taste the samples until they find the one they want to buy.</p>
         </div>
 
         <div class="promo">
             <p id="bullet">Promo</p>
             <img src="assets/img/promo.png">
+        </div>
+
+        <div class="location">
+            <p id="bullet">Location</p>
+            <div id="list-loc">
+                <ul>
+                    <li>
+                        <p><strong>Jakarta</strong><br />
+                        Pondok Indah Mall, Jakarta<br />
+                        tokopim@sweettreats.com<br />
+                        516 4040</p>
+                    </li>
+                    <li> 
+                        <p><strong>Surabaya</strong><br />
+                        Pakuwon Mall, Surabaya<br />
+                        tokopakuwon@sweettreats.com<br />
+                        125 3232</p>
+                    </li>
+                    <li>
+                        <p><strong>Medan</strong><br />
+                        Sun Plaza, Medan<br />
+                        tokomedan@sweettreats.com<br />
+                        682 8080</p>
+                    </li>
+                </ul>        
         </div>
 
 
