--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="main-nav">
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="about.html">About</a></li>
-                <li> <a href="card.html">Shop</a></li>
+                <li> <a href="menu.html">Menu</a></li>
                 <li> <a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -36,7 +36,7 @@
             <h1>Are you Ready ?</h1>
 
             <div class="button">
-                <a href="Ice cream menu.html" class="btn">Go For Ice Cream</a>
+                <a href="menu.html" class="btn">Go For Ice Cream</a>
 
             </div>
     </header>
