add team page  and animation

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 
     <title>About | Sweet Treats</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/animation.css">
 
 </head>
 
@@ -17,17 +18,18 @@
             <div class="logo">
                 <img src="assets/img/logo3.png">
             </div>
-            <ul class="main-nav">
-                <li> <a href="index.html">Home</a></li>
-                <li> <a href="about.html">About</a></li>
+            <ul class="main-nav animated fadeInRight">
+                <li> <a href="index.html"> Home </a></li>
+                <li class="page-active"> <a href="about.html"> <del>About</del> </a></li>
                 <li> <a href="menu.html">Menu</a></li>
                 <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="team.html">Developer</a></li>
             </ul>
         </div>
 
     </header>
 
-    <main>
+    <main class="animated fadeInLeft">
 
         <div class="top-content">
             <p id="headline">Our History</p>
@@ -50,24 +52,24 @@
                 <ul>
                     <li>
                         <p><strong>Jakarta</strong><br />
-                        Pondok Indah Mall, Jakarta<br />
-                        tokopim@sweettreats.com<br />
-                        516 4040</p>
+                            Pondok Indah Mall, Jakarta<br />
+                            tokopim@sweettreats.com<br />
+                            516 4040</p>
                     </li>
-                    <li> 
+                    <li>
                         <p><strong>Surabaya</strong><br />
-                        Pakuwon Mall, Surabaya<br />
-                        tokopakuwon@sweettreats.com<br />
-                        125 3232</p>
+                            Pakuwon Mall, Surabaya<br />
+                            tokopakuwon@sweettreats.com<br />
+                            125 3232</p>
                     </li>
                     <li>
                         <p><strong>Medan</strong><br />
-                        Sun Plaza, Medan<br />
-                        tokomedan@sweettreats.com<br />
-                        682 8080</p>
+                            Sun Plaza, Medan<br />
+                            tokomedan@sweettreats.com<br />
+                            682 8080</p>
                     </li>
-                </ul>        
-        </div>
+                </ul>
+            </div>
 
 
     </main>
