--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/animation.css">
+
     <title>IceCreamShop</title>
 </head>
 
@@ -15,11 +17,12 @@
             <div class="logo">
                 <img src="assets/img/logo3.png">
             </div>
-            <ul class="main-nav">
-                <li> <a href="index.html">Home</a></li>
+            <ul class="main-nav animated fadeInRight">
+                <li class="page-active"> <a href="index.html"> <del>Home</del> </a></li>
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="menu.html">Menu</a></li>
                 <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="team.html">Developer</a></li>
             </ul>
         </div>
 
@@ -32,10 +35,10 @@
             </div>
         -->
         </div>
-        <div class="Hero">
+        <div class="Hero animated fadeInLeft">
             <h1>Are you Ready ?</h1>
 
-            <div class="button">
+            <div class="button animated rubberBand">
                 <a href="menu.html" class="btn">Go For Ice Cream</a>
 
             </div>
