--- a/team.html
+++ b/team.html
@@ -5,7 +5,9 @@
   <title>Shop | Sweet Treats</title>
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="assets/css/animation.css">
+
 </head>
+
 <style>
   .button {
     background-color: #4CAF50;
@@ -43,6 +45,14 @@
     text-align: center;
     display: inline-block;
   }
+
+  .menu-4 {
+    height: auto;
+    width: 250px;
+    padding: 12px 20px;
+    text-align: center;
+    display: inline-block;
+  }
 </style>
 
 <body>
@@ -54,15 +64,15 @@
       <ul class="main-nav animated fadeInRight">
         <li> <a href="index.html">Home</a></li>
         <li> <a href="about.html">About</a></li>
-        <li class="page-active"> <a href="menu.html"> <del>Menu</del> </a></li>
+        <li> <a href="menu.html">Menu</a></li>
         <li> <a href="contact.html">Contact</a></li>
-        <li><a href="team.html">Developer</a></li>
+        <li class="page-active"> <a href="team.html"> <del>Developer</del> </a></li>
       </ul>
     </div>
 
   </header>
-  <div class="container  animated fadeInLeft">
-    <div class="card-menu">
+  <div class="container">
+    <div class="card">
 
       <img id="img-1" src="./assets/img/menu1.jpg">
 
@@ -70,6 +80,7 @@
 
       <img id="img-3" src="./assets/img/menu3.jpg">
 
+      <img id="img-4" src="./assets/img/menu3.jpg">
     </div>
 
   </div>
@@ -87,6 +98,12 @@
 
     </div>
     <div class="menu-3">
+      <h2 style="text-align: center; color: white">Sorbet</h2>
+      <p style="font-size: 12px; color: white">There's no dairy in this fruit-forward frozen treat, making it denser and
+        much richer in taste than traditional ice cream. Sometimes there's even alcohol in the recipe to lower the
+        freezing.
+    </div>
+    <div class="menu-4">
       <h2 style="text-align: center; color: white">Sorbet</h2>
       <p style="font-size: 12px; color: white">There's no dairy in this fruit-forward frozen treat, making it denser and
         much richer in taste than traditional ice cream. Sometimes there's even alcohol in the recipe to lower the
